[package]
name = "voting-dapp-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
borsh = "1.5.7"
byteorder = "1.5.0"
futures = "0.3.31"
solana-account-decoder = "=2.1.21"
solana-client = "=2.1.21"
solana-sdk = "=2.1.21"
tokio = { version = "1.45.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15" 
clap =  { version = "4.5.38", features = ["derive"] }
